white space / overflow wrap bug fixed

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -10,7 +10,7 @@
   line-height: 22px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  white-space: pre;
+  white-space: pre-wrap;
 
   .mobileInput {
     position: absolute;
